version/0.30/_sources/api/solver/_autosummary/settings/settings_15.rst.txt
:orphan:

.. _settings_15:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.settings_15
    :show-inheritance:

.. rubric:: Attributes

==================================   =============================================================

Attribute                                                                                  Summary

==================================   =============================================================
:ref:`network_end <network_end_1>`       Allows to change network-end model variables or settings.

:ref:`phase <phase_38>`                                         Domain name to define settings on.

==================================   =============================================================

.. rubric:: Included in:

================================================   =======================================

Parent                                                                             Summary

================================================   =======================================
:ref:`network_end_2_child <network_end_2_child>`       'child_object_type' of network_end.

================================================   =======================================

