version/0.37/_sources/api/solver/_autosummary/settings/settings_15.rst.txt
:orphan:

.. _settings_15:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.settings_15
    :show-inheritance:

.. rubric:: Attributes

========================================   =============================================================

Attribute                                                                                        Summary

========================================   =============================================================
:ref:`porous_jump <porous_jump_1>`             Allows to change porous-jump model variables or settings.

:ref:`discrete_phase <discrete_phase_2>`                                        Discrete Phase settings.

:ref:`geometry <geometry_6>`                      Allows to change geometry model variables or settings.

:ref:`phase <phase_17>`                                               Domain name to define settings on.

========================================   =============================================================

.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`porous_jump_child <porous_jump_child>`       'child_object_type' of porous_jump.

============================================   =======================================

